bk_ida/gccida/c1/add_byte_size_attribute
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/add_byte_size_attribute/src/dwarf2out.c:9760:12: error: use of undeclared identifier 'v3'
tree_node *v3; // rax 
           ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/add_byte_size_attribute/src/dwarf2out.c:9774:1: error: use of undeclared identifier 'v3'
v3 = field_type( tree_node); 
^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/add_byte_size_attribute/src/dwarf2out.c:9775:32: error: use of undeclared identifier 'v3'
v2 = simple_type_size_in_bits( v3) >> 3; 
                               ^
3 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/add_byte_size_attribute/src/obj/dwarf2out.o] Error 1
